--- a/index.html
+++ b/index.html
@@ -1,42 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portcullis Inital Capstone Web Site</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-    
-        <h1>Welcome to our project,</h1>
-        <img src="images/portcullis_logo.png" alt="Portcullis Logo" id="logo">
-        <p>We are team Portcullis, here's our logo and team, our website will appear here soon</p>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Capstone Project - Home</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="sidebar">
+      <a href="index.html">
+        <img
+          src="./images/portcullis_logo.png"
+          alt="Portcullis Logo"
+          class="logo"
+        />
+      </a>
+      <a href="index.html" class="active">Home</a>
+      <a href="team.html">Team</a>
+      <a href="project.html">Project Details</a>
+      <a href="documents.html">Documents</a>
     </div>
 
-    <div class="team-container">
-        <h2>Meet the Team</h2>
-        <div class="team-member">
-            <img src="images/Aiden_Seay.png" alt="Aiden Seay">
-            <h1>Aiden Seay</h1>
-            <p>ags392@nau.edu</p>
-        </div>
-        <div class="team-member">
-            <img src="images/Christopher_Son.png" alt="Christopher Son">
-            <h1>Christopher Son</h1>
-            <p>cks276@nau.edu</p>
+    <h1 class="title">
+      Portcullis
+      <img src="./images/portcullis_logo.png" alt="Portcullis Logo" />
+    </h1>
 
-        </div>
-        <div class="team-member">
-            <img src="images/Preston_Smith.png" alt="Preston Smith">
-            <h1>Preston Smith</h1>
-            <p>pts44@nau.edu</p>
-        </div>
-        <div class="team-member">
-            <img src="images/Ryan_Todd.png" alt="Ryan Todd">
-            <h1>Ryan Todd</h1>
-            <p>rnt45@nau.edu</p>
-        </div>
+    <div class="content">
+      <h1>Team Information</h1>
+      <ul>
+        <li>
+          Christopher Son
+          <ul>
+            <li></li>
+          </ul>
+        </li>
+
+        <li>
+          Aiden Seay
+          <ul>
+            <li></li>
+          </ul>
+        </li>
+
+        <li>
+          Preston Smith
+          <ul>
+            <li></li>
+          </ul>
+        </li>
+
+        <li>
+          Ryan Todd
+          <ul>
+            <li></li>
+          </ul>
+        </li>
+      </ul>
+      <h1>Our Mentor</h1>
+      <ul>
+        <li>
+          Bailey Hall
+          <ul>
+            <li></li>
+          </ul>
+        </li>
+      </ul>
+      <h1>Our Sponsor</h1>
+      <ul>
+        <li>
+          General Dynamics Mission Systems
+          <ul>
+            <li></li>
+          </ul>
+        </li>
+      </ul>
     </div>
-</body>
+  </body>
 </html>
