--- a/index.html
+++ b/index.html
@@ -20,57 +20,49 @@
       <a href="documents.html">Documents</a>
     </div>
 
-    <h1 class="title">
-      Portcullis
-      <img src="./images/portcullis_logo.png" alt="Portcullis Logo" />
-    </h1>
-
     <div class="content">
+      <h1 class="content-title">
+        Portcullis
+        <img src="./images/portcullis_logo.png" alt="Portcullis Logo" />
+      </h1>
       <h1>Team Information</h1>
       <ul>
-        <li>
-          Christopher Son
-          <ul>
-            <li></li>
-          </ul>
-        </li>
+        <li>Christopher Son - Team Lead, Client Communicator & Coder</li>
 
-        <li>
-          Aiden Seay
-          <ul>
-            <li></li>
-          </ul>
-        </li>
+        <li>Aiden Seay - Recorder & Code</li>
 
-        <li>
-          Preston Smith
-          <ul>
-            <li></li>
-          </ul>
-        </li>
+        <li>Preston Smith - Architect & Coder</li>
 
-        <li>
-          Ryan Todd
-          <ul>
-            <li></li>
-          </ul>
-        </li>
+        <li>Ryan Todd - Release Manager & Coder</li>
       </ul>
+
+      <a href="team.html" class="button">More Information</a>
       <h1>Our Mentor</h1>
       <ul>
-        <li>
-          Bailey Hall
-          <ul>
-            <li></li>
-          </ul>
-        </li>
+        <li>Bailey Hall - GTA for CS476</li>
       </ul>
-      <h1>Our Sponsor</h1>
+      <h1>Our Sponsor - General Dynamics Mission Systems</h1>
       <ul>
         <li>
-          General Dynamics Mission Systems
+          Benjamin Walker
           <ul>
-            <li></li>
+            <li>With GD for 13 years</li>
+            <li>
+              System Engineer, best sourse of knowledge for general system
+              knowledge
+            </li>
+            <li>Benjamin.Walker@GD-MS.com</li>
+          </ul>
+        </li>
+        <li>
+          Alex Grebhart
+          <ul>
+            <li>With GD for 1.5 years</li>
+            <li>
+              Mechanical Engineer, main point of contact for knowledge about
+              pysical mechanisms
+            </li>
+            <li>Alexander.Grebhart@GD-MS.com</li>
           </ul>
         </li>
       </ul>
