--- a/project.html
+++ b/project.html
@@ -20,10 +20,19 @@
       <a href="documents.html">Documents</a>
     </div>
 
-    <h1 class="title">Project Details</h1>
+
 
     <div class="content">
+      <h1 class="title">Project Details</h1>
       <h1>Project Description</h1>
+
+      <p> Our project, developed in collaboration with <span class="company-name">General Dynamics Mission Systems</span>, focuses on creating a <strong>secure</strong> and <strong>resilient</strong> remote door controller system designed to protect critical infrastructure.
+          <span class="company-name">General Dynamics</span> operates numerous remote facilities across the United States that house sensitive, high-value equipment.
+          This creates a need for reliable access control that protects assets while supporting operations.
+          The challenge is ensuring secure access for authorized personnel even during <strong>network disruptions</strong> or <strong>power outages</strong>.
+          Our goal is to create a robust solution that allows administrators to securely monitor and control door access from anywhere in the world, 
+          providing <strong>real-time logging</strong>, <strong>intrusion detection</strong>, and <strong>remote credential management</strong>. 
+
       <h1>Requirements</h1>
       <h1>Envisioned Soultion</h1>
       <h1>Technologies</h1>
