Update content title class and adjust layout styles
Changed the main heading in project.html from 'title' to 'content-title' for consistency. Updated style.css to adjust body padding, content margins, and minimum height for improved layout and appearance.

--- a/project.html
+++ b/project.html
@@ -23,7 +23,7 @@
 
 
     <div class="content">
-      <h1 class="title">Project Details</h1>
+      <h1 class="content-title">Project Details</h1>
       <h1>Project Description</h1>
 
       <p> Our project, developed in collaboration with <span class="company-name">General Dynamics Mission Systems</span>, focuses on creating a <strong>secure</strong> and <strong>resilient</strong> remote door controller system designed to protect critical infrastructure.
