Update content title class and adjust layout styles
Changed the main heading in project.html from 'title' to 'content-title' for consistency. Updated style.css to adjust body padding, content margins, and minimum height for improved layout and appearance.

--- a/project.html
+++ b/project.html
@@ -32,8 +32,19 @@
           The challenge is ensuring secure access for authorized personnel even during <strong>network disruptions</strong> or <strong>power outages</strong>.
           Our goal is to create a robust solution that allows administrators to securely monitor and control door access from anywhere in the world, 
           providing <strong>real-time logging</strong>, <strong>intrusion detection</strong>, and <strong>remote credential management</strong>. 
+      </p>
 
-      <h1>Requirements</h1>
+      <h1>Software & Security Requirements</h1>
+      <p>To guide development, our team defined the following key requirements for the software platform. The platform must handle:</p>
+      <ul>
+        <li>A centralized and user-friendly management platform for administrators.</li>
+        <li>User authentication, access entry logs, and intrusion detection.</li>
+        <li>The execution of remote commands to lock or unlock doors.</li>
+        <li>Maintaining industry-standard encryption protocols.</li>
+      </ul>
+      <p><strong>Above all</strong>, a critical requirement is the system's resilience; it must ensure continuous operation on high-latency networks and maintain its secure state through power and network outages.</p>
+      
+      </ul>
       <h1>Envisioned Soultion</h1>
       <h1>Technologies</h1>
       <h1>Schedule</h1>
