Add details to project details, documents, and team htmls files
Add information in to every section. Still can be cleaned up and improved.

--- a/team.html
+++ b/team.html
@@ -20,13 +20,54 @@
       <a href="documents.html">Documents</a>
     </div>
 
-    <h1 class="title">Meet the Team</h1>
-
     <div class="content">
-      <h1>Christopher Son</h1>
-      <h1>Aiden Seay</h1>
-      <h1>Preston Smith</h1>
-      <h1>Ryan Todd</h1>
+      <h1 class="title">Meet the Team</h1>
+
+      <div class="team-container">
+        <div class="team">
+          <img
+            src="./images/Christopher_Son.png"
+            alt="Christopher Son"
+            class="team-photo"
+          />
+          <h2>Christopher Son</h2>
+          <p>Team Lead, Client Communicator & Coder</p>
+          <p>C, Python, SQL, Bug Testing</p>
+        </div>
+
+        <div class="team">
+          <img
+            src="./images/Aiden_Seay.png"
+            alt="Aiden Seay"
+            class="team-photo"
+          />
+          <h2>Aiden Seay</h2>
+          <p>Recorder & Coder</p>
+          <p>C, Python, Pandas, NumPy</p>
+        </div>
+
+        <div class="team">
+          <img
+            src="./images/Preston_Smith.png"
+            alt="Preston Smith"
+            class="team-photo"
+          />
+          <h2>Preston Smith</h2>
+          <p>Architect & Coder</p>
+          <p>C, Python, R, JavaScript, Node.js</p>
+        </div>
+
+        <div class="team">
+          <img
+            src="./images/Ryan_Todd.png"
+            alt="Ryan Todd"
+            class="team-photo"
+          />
+          <h2>Ryan Todd</h2>
+          <p>Release Manager & Coder</p>
+          <p>C, C++, Python, JavaScript, Flask</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
