--- a/documents.html
+++ b/documents.html
@@ -20,10 +20,16 @@
       <a href="documents.html" class="active">Documents</a>
     </div>
 
-    <h1 class="title">Documents (Archive)</h1>
-
     <div class="content">
+      <h1 class="title">Documents (Archive)</h1>
       <h1>Click on link to access a document</h1>
+      <ul>
+        <li>
+          <a href="./document_files/SLAM-DOORS.pdf"
+            >Initial Project Proposal(PDF)</a
+          >
+        </li>
+      </ul>
     </div>
   </body>
 </html>
