--- a/project.html
+++ b/project.html
@@ -20,18 +20,27 @@
       <a href="documents.html">Documents</a>
     </div>
 
-
-
     <div class="content">
       <h1 class="content-title">Project Details</h1>
       <h1>Project Description</h1>
 
-      <p> Our project, developed in collaboration with <span class="company-name">General Dynamics Mission Systems</span>, focuses on creating a <strong>secure</strong> and <strong>resilient</strong> remote door controller system designed to protect critical infrastructure.
-          <span class="company-name">General Dynamics</span> operates numerous remote facilities across the United States that house sensitive, high-value equipment.
-          This creates a need for reliable access control that protects assets while supporting operations.
-          The challenge is ensuring secure access for authorized personnel even during <strong>network disruptions</strong> or <strong>power outages</strong>.
-          Our goal is to create a robust solution that allows administrators to securely monitor and control door access from anywhere in the world, 
-          providing <strong>real-time logging</strong>, <strong>intrusion detection</strong>, and <strong>remote credential management</strong>. 
+      <p>
+        Our project, developed in collaboration with
+        <span class="company-name">General Dynamics Mission Systems</span>,
+        focuses on creating a <strong>secure</strong> and
+        <strong>resilient</strong> remote door controller system designed to
+        protect critical infrastructure.
+        <span class="company-name">General Dynamics</span> operates numerous
+        remote facilities across the United States that house sensitive,
+        high-value equipment. This creates a need for reliable access control
+        that protects assets while supporting operations. The challenge is
+        ensuring secure access for authorized personnel even during
+        <strong>network disruptions</strong> or <strong>power outages</strong>.
+        Our goal is to create a robust solution that allows administrators to
+        securely monitor and control door access from anywhere in the world,
+        providing <strong>real-time logging</strong>,
+        <strong>intrusion detection</strong>, and
+        <strong>remote credential management</strong>.
       </p>
 
       <h1>Software & Security Requirements</h1>
@@ -45,9 +54,35 @@
       <p><strong>Above all</strong>, a critical requirement is the system's resilience; it must ensure continuous operation on high-latency networks and maintain its secure state through power and network outages.</p>
       
       </ul>
-      <h1>Envisioned Soultion</h1>
+      <h1>Envisioned Solution</h1>
+      <p>We plan to build a secure and reliable system that controlls and logs access to secure sites. The system will be in control of the doors access via an RFID card reader which will read personel's information and will check their authorization access. The system will keep a log of every entry in and out of the building and send the logs to an admin portal and displays which acces was provided, such as: no access, authorized access, or unauthroized access.</p>
       <h1>Technologies</h1>
+      <h2><strong>GitHub</strong></h2>
+      <ul>
+        <li>Our Version Control Software; It make sharing code easy and reliable between the entire group, keeping a consisitent structure of our codebase.</li>
+      </ul>
+      <h2><strong>VSCode</strong></h2>
+      <ul>
+        <li>Our IDE of choice; This makes it easy to view, edit and write code with a graphical interface.</li>
+      </ul>
+      <h2><strong>HTML5, CSS, JavaScript</strong></h2>
+      <ul>
+        <li>Essential languages for a web application; These will enable to create an web based admin portal for the clients.</li>
+      </ul>
+      <h2><strong>C</strong></h2>
+      <ul>
+        <li>A low level programming language that is commonly used in microcontroller programming; We will use C to interface with the hardware of the sites via microcontrollers.</li>
+      </ul>
+      <h2><strong>Slack</strong></h2>
+      <ul>
+        <li>Our choice of communication software for communicating with the clients; We will use this for an streamlined method of consisitent communication between the group and the clients as apposed to email.</li>
+      </ul>
+      <h2><strong>Trello</strong></h2>
+      <ul>
+        <li>Our choice of task management software; We will use this to assign and track tasks for each team memeber to see who is working on which tasks and see development progress. </li>
+      </ul>
       <h1>Schedule</h1>
+      <p>Schedule has not been established yet. Will be updated soon</p>
     </div>
   </body>
 </html>
