Add sidebar navigation and restructure site layout
Introduced a sidebar navigation to all pages for improved usability and consistency. Added new pages for team, project details, and documents. Updated index.html to use the new layout and moved team information to a dedicated page. Refactored style.css to support the new design and layout.

--- a/documents.html
+++ b/documents.html
@@ -25,8 +25,17 @@
       <h1>Click on link to access a document</h1>
       <ul>
         <li>
-          <a href="./document_files/SLAM-DOORS.pdf"
+          <a href="./documents/SLAMDoors_Abousleman.pdf"
             >Initial Project Proposal(PDF)</a
+          >
+          <a href="./documents/Portcullis Mini-Intro.pdf"
+            >Portcullis Mini-Intro(PDF)</a
+          >
+          <a href="./documents/Portcullis_Team_Inventory.pdf"
+            >Portcullis Team Inventory(PDF)</a
+          >
+          <a href="./documents/Portcullis_Team_Standards.pdf"
+            >Portcullis Team Standards(PDF)</a
           >
         </li>
       </ul>
