--- a/project.html
+++ b/project.html
@@ -82,7 +82,10 @@
         <li>Our choice of task management software; We will use this to assign and track tasks for each team memeber to see who is working on which tasks and see development progress. </li>
       </ul>
       <h1>Schedule</h1>
-      <p>Schedule has not been established yet. Will be updated soon</p>
+      <ul>
+        <li>Weekly Mentor Meetings - Wednesdays 2PM</li>
+      </ul>
+      <p>Schedule has not been fully established yet. Will be updated soon</p>
     </div>
   </body>
 </html>
