Bullet List - Documents

--- a/documents.html
+++ b/documents.html
@@ -22,20 +22,26 @@
 
     <div class="content">
       <h1 class="title">Documents (Archive)</h1>
-      <h1>Click on link to access a document</h1>
+      <h1>Click on a link to access a document</h1>
       <ul>
         <li>
           <a href="./documents/SLAMDoors_Abousleman.pdf"
-            >Initial Project Proposal(PDF)</a
+            >Initial Project Proposal (PDF)</a
           >
+        </li>
+        <li>
           <a href="./documents/Portcullis Mini-Intro.pdf"
-            >Portcullis Mini-Intro(PDF)</a
+            >Portcullis Mini-Intro (PDF)</a
           >
+        </li>
+        <li>
           <a href="./documents/Portcullis_Team_Inventory.pdf"
-            >Portcullis Team Inventory(PDF)</a
+            >Portcullis Team Inventory (PDF)</a
           >
+        </li>
+        <li>
           <a href="./documents/Portcullis_Team_Standards.pdf"
-            >Portcullis Team Standards(PDF)</a
+            >Portcullis Team Standards (PDF)</a
           >
         </li>
       </ul>
